Fixed: Text not fit in mobile resolution in Initial Page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1471,6 +1471,14 @@ select {
 .text-\[110px\] {
   font-size: 110px;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1981,6 +1989,16 @@ select {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .sm\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
 }
 @media (min-width: 768px) {
 
@@ -2018,6 +2036,14 @@ select {
 
   .md\:gap-2 {
     gap: 0.5rem;
+  }
+
+  .md\:text-\[110px\] {
+    font-size: 110px;
+  }
+
+  .md\:text-\[50px\] {
+    font-size: 50px;
   }
 }
 @media (min-width: 1024px) {
